# remote_turtle

./: .gitignore
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
devel/.private/udp_manager/: .catkin  .rosinstall  local_setup.sh
devel/.private/udp_manager/lib/pkgconfig/: udp_manager.pc
devel/.private/udp_manager/lib/udp_manager/: udp_client  udp_server
devel/.private/udp_manager/share/udp_manager/cmake/: udp_managerConfig.cmake
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  udp_manager.pc
devel/lib/udp_manager/: udp_client  udp_server
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/udp_manager/cmake/: udp_managerConfig-version.cmake  udp_managerConfig.cmake
src/remote_turtle_controller/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.h.autosave  mainwindow.ui  remote_turtle_controller.pro
src/udp_manager/: CMakeLists.txt  package.xml
src/udp_manager/include/udp_manager/: udp_client.hpp  udp_server.hpp
src/udp_manager/src/client/: udp_client.cpp
src/udp_manager/src/server/: udp_server.cpp
